--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -4,3 +4,10 @@ spring:
     path: '/console'
   datasource:
     url: 'jdbc:h2:file:/home/agnieszka/Desktop/spring-course/todo-app/todo-db'
+  jpa:
+    hibernate:
+       ddl-auto: validate
+
+
+
+
