--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-spring.profiles.active=prod
+spring.profiles.active=local
 spring.main.banner-mode=off
 task.template.allowMultipleTasks=false
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+
+#logging.level.root=debug
